CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(marcopolo C)

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g -pg -Wall")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_DEBUG} -O3 -Wall")


INCLUDE_DIRECTORIES(./Include)
FILE( GLOB_RECURSE SOURCE_FILES "Source/*" )
ADD_LIBRARY(marcopolo ${SOURCE_FILES})  

enable_testing ()
ADD_SUBDIRECTORY(Tests/PQTest)
ADD_SUBDIRECTORY(Tests/SSTest)
ADD_SUBDIRECTORY(Tests/PolyUnionTest)
ADD_SUBDIRECTORY(Tests/PrimitiveTest)
