CMAKE_MINIMUM_REQUIRED (VERSION 2.8)
PROJECT(marcopolo C)

set( CMAKE_EXPORT_COMPILE_COMMANDS 1 )

if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  message(STATUS "Setting build type to 'Release' as none was specified.")
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules/")
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-Wall")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0 -g -pg -std=c89")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} -O3 -DNDEBUG -std=c89")


INCLUDE_DIRECTORIES(./src)
FILE( GLOB_RECURSE SOURCE_FILES "src/*" )
ADD_LIBRARY(marcopolo ${SOURCE_FILES})  

enable_testing ()
ADD_SUBDIRECTORY(test/PQTest)
ADD_SUBDIRECTORY(test/SSTest)
ADD_SUBDIRECTORY(test/PolyUnionTest)
ADD_SUBDIRECTORY(test/PrimitiveTest)


